--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Placeholder</title>
+    <link rel="stylesheet" herf="./style.css"></link>
   </head>
   <body>
     
